--- a/Contact.html
+++ b/Contact.html
@@ -38,6 +38,11 @@
                     </a>
                 </li>
                 <li>
+                    <a href="Experience.html">
+                        Coding Journey
+                    </a>
+                </li>
+                <li>
                     <a href="Contact.html">
                         Contact
                     </a>
