--- a/Projects.html
+++ b/Projects.html
@@ -38,10 +38,11 @@
                     </a>
                 </li>
                 <li>
-                    <a href="Contact.html">
-                        Contact
+                    <a href="Experience.html">
+                        Coding Journey
                     </a>
-                </li>                   
+                </li>
+                                
             </ul>
         </div>
         <div class="social">
@@ -63,6 +64,71 @@
                 </li>
             </ul>
         </div>
+    </div>
+
+    <div class="project_title">
+        <h1>
+            Projects
+        </h1>
+    </div>
+
+    <div class="projects_table">
+        <table>
+            <tr>
+                <th>Project</th>
+                <th>Description</th>
+                <th>Tools Used</th>
+                <th>Languages Used</th>
+            </tr>
+            <tr>
+                <td>Information Retrieval System</td>
+                <td>A model that employs a Markov Decision Process (MDP) in combination with Policy Iteration to determine optimal trading signals by analyzing historical data, enabling it to assess whether a given stock is likely to yield profitable returns based on past price trends. </td>
+                <td>Sklearn, BERT, Word2Vec</td>
+                <td>Python</td>
+            </tr> 
+            <tr>
+                <td>Personal Assistant Chatbot</td>
+                <td>A facial recognition-enabled chatbot that utilizes Image and Video Processing for face recognition and Natural Language Processing for interpreting user queries. The system can optimize your schedule by integrating with linked calendars and setting reminders automatically based on the type of event.                </td>
+                <td>Sklearn, Word2Vec</td>
+                <td>Python</td>
+            </tr>
+            <tr>
+                <td>Movie Recommender System</td>
+                <td>A Recommender System that employs User-Based Collaborative Filtering and Item-Based Collaborative Filtering approaches to suggest movies to individual users based on their preferences, including previously unseen ones, and also offers group recommendations based on the collective preferences of the members.                </td>
+                <td>Sklearn, Kaggle</td>
+                <td>Python</td>
+            </tr> 
+            <tr>
+                <td>Generating Share-Specific Trading Signals using Policy Iteration</td>
+                <td>A model that employs a Markov Decision Process (MDP) in combination with Policy Iteration to determine optimal trading signals by analyzing historical data, enabling it to assess whether a given stock is likely to yield profitable returns based on past price trends. </td>
+                <td>Sklearn</td>
+                <td>Python, R</td>
+            </tr>
+            <tr>
+                <td>Artificial Intelligence Based Personal Trainer</td>
+                <td>A machine learning algorithm trained on a vast dataset of training plans designed by coaches for their clients, capable of discerning patterns and generating personalized plans for individual users. </td>
+                <td>Sklearn, Google Analytics, Firebase, Domo, Excel</td>
+                <td>Python, SQL, Excel</td>
+            </tr>
+            <tr>
+                <td>Client Conversion Predictor</td>
+                <td> A combination-regression model that uses data on client demographics, usage history, frequency of usage, and other relevant information to predict the likelihood of client conversions and client churn.                </td>
+                <td>Sklearn, Firebase, Domo</td>
+                <td>Python, Excel</td>
+            </tr>
+            <tr>
+                <td>Gun Violence Predictor</td>
+                <td>A regression model that tries to analyze and predict gun violence incidents in the US based on relevant details of each incident such as location of the incident, demographics of the victim(s) and details about the gun.</td>
+                <td>Sklearn, Seaborn</td>
+                <td>Python</td>
+            </tr>
+            <tr>
+                <td>Employee Scheduler</td>
+                <td>An algorithm that schedules shifts for employees by factoring in individual availability, rank, responsibilities, and employer specifications, with plans to develop a user-friendly interface and offer it as a service to clients. </td>
+                <td>Pandas</td>
+                <td>Python</td>
+            </tr>
+          </table> 
     </div>
 
     </body>
