--- a/index.html
+++ b/index.html
@@ -42,11 +42,7 @@
                             Coding Journey
                         </a>
                     </li>
-                    <li>
-                        <a href="Contact.html">
-                            Contact
-                        </a>
-                    </li>                   
+                                    
                 </ul>
             </div>
             <div class="social">
@@ -89,7 +85,7 @@
             <h2>
                 I'm a 22 year old young woman from India and I currently live in The Netherlands. <br>
                 I graduated from Maastricht University with a Bachelor in Data Science and Artificial Intelligence. <br>
-                During my study, I completed multiple projects and internships and I was also a varisty rower. <br>
+                During my study, I completed multiple projects and internships and I was also a varisty athlete. <br>
                 You can find an overview of my projects and coding journey below.
 
             </h2>
