--- a/Experience.html
+++ b/Experience.html
@@ -38,10 +38,11 @@
                     </a>
                 </li>
                 <li>
-                    <a href="Contact.html">
-                        Contact
+                    <a href="Experience.html">
+                        Coding Journey
                     </a>
-                </li>                   
+                </li>
+                                
             </ul>
         </div>
         <div class="social">
@@ -64,6 +65,9 @@
             </ul>
         </div>
     </div>
-
+    
+    <div class="experience_img">
+        <img src="/Experience.drawio.svg" alt="My experience road map">
+    </div>
     </body>
 </html>
