--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="/src/main.jsx" type="text/javascript" ></script>
+    <script src="/src/main.jsx" type="module" ></script>
   </body>
 </html>
