--- a/Projects.html
+++ b/Projects.html
@@ -82,7 +82,7 @@
             </tr>
             <tr>
                 <td>Information Retrieval System</td>
-                <td>A model that employs a Markov Decision Process (MDP) in combination with Policy Iteration to determine optimal trading signals by analyzing historical data, enabling it to assess whether a given stock is likely to yield profitable returns based on past price trends. </td>
+                <td>A model that leverages Natural Language Processing and Natural Language Generation techniques to improve customer service by automating responses to queries based on provided documents, reducing manual labor involved in the process. </td>
                 <td>Sklearn, BERT, Word2Vec</td>
                 <td>Python</td>
             </tr> 
